Backport to Java 17 and added new DOM features